--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
 
   <div class="content">
 
-    <div class="text">
-      <h1>Welcome to w000tupf00l's site!</h1>
-    </div>
+
+    <div class="gh"><img src="welcome.png" alt=""></div>
 
     <div class="text">
       <h2>Pentesting | Python | Shell script | JavaScript</h2>
