--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="content">
 
 
-    <div class="gh"><img src="welcome.png" alt=""></div>
+    <img src="welcome.png" alt="welcome" class="welcome">
 
     <div class="text">
       <h2>Pentesting | Python | Shell script | JavaScript</h2>
