--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
 
     <img src="welcome.png" alt="welcome" class="welcome">
 
-    <div class="text">
-      <h2>Pentesting | Python | Shell script | JavaScript</h2>
-    </div>
+    <img src="skills.png" alt="welcome" class="welcome">
 
     <div class="stuff">
 
@@ -48,9 +46,7 @@
 
     </div>
 
-    <div class="text">
-      <p>&copy; 2022 <strong><span>w00tupf00l</span></strong> All Rights Reserved</p>
-    </div>
+    <img src="copyright.png" alt="copyright" class="welcome">
 
     <div class="counter">
       <div id="sfcea2r3dmhz1pmgcprapyfgqrq6rx7622n">
