--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     </div>
 
-    <img src="copyright.png" alt="copyright" class="welcome">
+    <img src="copyright.png" alt="copyright" class="copyright">
 
 
   </div>
