--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <script src="https://tryhackme.com/badge/378680"></script>
       </div>
 
-      <div class="gh"> <img src="https://www.hackthebox.com/badge/image/907344" alt="htb">
-      </div>
+      <div class="gh"> <a href="https://www.hackthebox.com/home/users/profile/907344"> <img src="https://www.hackthebox.com/badge/image/907344" alt="htb">
+   </a>   </div>
 
       <div class="rootme">
         <a href="https://www.root-me.org/w000tupf00l?lang=en"><img src="rootme.png" alt="root-me" width="200px"></a>
