--- a/index.html
+++ b/index.html
@@ -34,20 +34,22 @@
         <script src="https://tryhackme.com/badge/378680"></script>
       </div>
 
-      <div class="gh"> <a href="https://www.hackthebox.com/home/users/profile/907344"> <img src="https://www.hackthebox.com/badge/image/907344" alt="htb">
-   </a>   </div>
+      <div class="gh"> <a href="https://www.hackthebox.com/home/users/profile/907344"> <img src="https://www.hackthebox.com/badge/image/907344"
+            alt="htb">
+        </a> </div>
 
       <div class="rootme">
         <a href="https://www.root-me.org/w000tupf00l?lang=en"><img src="rootme.png" alt="root-me" width="200px"></a>
       </div>
 
       <div class="gh"><a href="https://github.com/lstn196"><img src="gh.png" alt="github" width="50px"></a>
+      
       </div>
-
-    </div>
-
-    <img src="copyright.png" alt="copyright" class="copyright">
-
+      <img src="copyright.png" alt="copyright" class="copyright">
+      </div>
+<div class="counter">
+  <a href="https://www.freecounterstat.com" title="hit counters for websites"><img src="https://counter9.stat.ovh/private/freecounterstat.php?c=l5yqtex7ukw325pztnq5r89n97nqzemn" border="0" title="hit counters for websites" alt="hit counters for websites"></a>
+</div>
 
   </div>
 
